--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "main.ts",
   "scripts": {
     "build":"tsc --build",
+    "clean": "tsc --build --clean",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
