--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "kolekt",
   "version": "1.0.5",
   "description": "A wrapper for the browser fetch api with middleware supprot and request lifecycle methods.",
-  "main": "kolekt.ts",
-  "types": "dist/kolekt.d.ts",
+  "main": "util.ts",
+  "types": "dist/util.d.ts",
   "scripts": {
     "build":"tsc --build",
     "clean": "tsc --build --clean",
