--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "kolekter",
-  "version": "1.2.0",
+  "name": "kolektor",
+  "version": "1.0.0",
   "description": "A wrapper for the browser fetch api with middleware supprot and request lifecycle methods.",
   "main": "util.ts",
   "types": "dist/util.d.ts",
